include/altdss/capi/dss.h

    /*! 
    Gearbox ratio
    */
    ALTDSS_CAPI_DLL double WindGens_Get_Ag(void);
    /*! 
    Gearbox ratio
    */
    ALTDSS_CAPI_DLL void WindGens_Set_Ag(double Value);
    /*! 
    Turbine performance coefficient.
    */
    ALTDSS_CAPI_DLL double WindGens_Get_Cp(void);
    /*! 
    Turbine performance coefficient.
    */
    ALTDSS_CAPI_DLL void WindGens_Set_Cp(double Value);
    /*! 
    Tip speed ratio
    */
    ALTDSS_CAPI_DLL double WindGens_Get_Lamda(void);
    /*! 
    Tip speed ratio
    */
    ALTDSS_CAPI_DLL void WindGens_Set_Lamda(double Value);
    /*! 
    Number of WTG in aggregation
    */
    ALTDSS_CAPI_DLL int32_t WindGens_Get_N_WTG(void);
    /*! 
    Number of WTG in aggregation
    */
    ALTDSS_CAPI_DLL void WindGens_Set_N_WTG(int32_t Value);
    /*! 
    Number of pole pairs of the induction generator
    */
    ALTDSS_CAPI_DLL int32_t WindGens_Get_NPoles(void);
    /*! 
    Air density in kg/m3
    */
    ALTDSS_CAPI_DLL double WindGens_Get_pd(void);
    /*! 
    Steady state output real power.
    */
    ALTDSS_CAPI_DLL double WindGens_Get_PSS(void);
    /*! 
    Non-zero values enable reactive power and voltage control in the dynamic model.
    */
    ALTDSS_CAPI_DLL int32_t WindGens_Get_QFlag(void);
    /*! 
    Q control mode (0:Q, 1:PF, 2:VV).
    */
    ALTDSS_CAPI_DLL int32_t WindGens_Get_QMode(void);
    /*! 
    Steady state output reactive power.
    */
    ALTDSS_CAPI_DLL double WindGens_Get_QSS(void);
    /*! 
    Rotor radius in meters
    */
    ALTDSS_CAPI_DLL double WindGens_Get_Rad(void);
    /*! 
    Per unit Thevenin equivalent resistance (R).
    */
    ALTDSS_CAPI_DLL double WindGens_Get_RThev(void);
    /*! 
    Cut-in speed for the wind generator
    */
    ALTDSS_CAPI_DLL double WindGens_Get_VCutIn(void);
    /*! 
    Cut-out speed for the wind generator
    */
    ALTDSS_CAPI_DLL double WindGens_Get_VCutOut(void);
    /*! 
    Steady state voltage magnitude.
    */
    ALTDSS_CAPI_DLL double WindGens_Get_Vss(void);
    /*! 
    Wind speed in m/s
    */
    ALTDSS_CAPI_DLL double WindGens_Get_WindSpeed(void);
    /*! 
    Per unit Thevenin equivalent reactance (X).
    */
    ALTDSS_CAPI_DLL double WindGens_Get_XThev(void);
    /*! 
    Number of phases

    (API Extension)
    */
    ALTDSS_CAPI_DLL int32_t WindGens_Get_Phases(void);
    /*! 
    Number of phases

    (API Extension)
    */
    ALTDSS_CAPI_DLL void WindGens_Set_Phases(int32_t Value);
    /*! 
    Name of the loadshape for daily wind speed

    (API Extension)
    */
    ALTDSS_CAPI_DLL const char* WindGens_Get_daily(void);
    ALTDSS_CAPI_DLL void WindGens_Set_daily(const char* Value);
    /*! 
    Name of the loadshape for a duty cycle simulation.

    (API Extension)
    */
    ALTDSS_CAPI_DLL const char* WindGens_Get_duty(void);
    ALTDSS_CAPI_DLL void WindGens_Set_duty(const char* Value);
    /*! 
    Name of yearly loadshape

    (API Extension)
    */
    ALTDSS_CAPI_DLL const char* WindGens_Get_Yearly(void);
    ALTDSS_CAPI_DLL void WindGens_Set_Yearly(const char* Value);
    /*! 
    WindGen connection. True/1 if delta connection, False/0 if wye.

    (API Extension)
    */
    ALTDSS_CAPI_DLL uint16_t WindGens_Get_IsDelta(void);
    ALTDSS_CAPI_DLL void WindGens_Set_IsDelta(uint16_t Value);
    /*! 
    An arbitrary integer number representing the class of WindGen so that WindGen values may be segregated by class.

    (API Extension)
    */
    ALTDSS_CAPI_DLL int32_t WindGens_Get_Class_(void);
    ALTDSS_CAPI_DLL void WindGens_Set_Class_(int32_t Value);
    /*! 
    Bus to which the WindGen is connected. May include specific node specification.
    
    (API Extension)
    */
    ALTDSS_CAPI_DLL const char* WindGens_Get_Bus1(void);
    ALTDSS_CAPI_DLL void WindGens_Set_Bus1(const char* Value);