src/CAPI/CAPI_WindGens.pas


    elem.Genvars.kVArating := Value;
    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        elem.PropertySideEffects(ord(TWindGenProp.kVA), 0, []);
        elem.RecalcElementData();
    end
    else
    begin
        elem.WindModelDyn.ratedKVA := Value;
        elem.WindModelDyn.RecalcElementData();
    end;
end;
//------------------------------------------------------------------------------
function WindGens_Get_Phases(): Integer; CDECL; // API Extension
var
    elem: TWindGenObj;
begin
    Result := 0;  // not set
    if not _activeObj(DSSPrime, elem) then
        Exit;

    Result := elem.nphases;
end;

//------------------------------------------------------------------------------
procedure WindGens_Set_Phases(Value: Integer); CDECL; // API Extension
var
    elem: TWindGenObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;

    if Value < 1 then
    begin
        DoSimpleMsg(DSSPrime, '%s: Number of phases must be a positive integer!', [elem.FullName()], 6568);
        Exit;
    end;
    elem.FNphases := Value;

    // if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    // begin
    elem.PropertySideEffects(ord(TWindGenProp.Phases), 0, []);
    elem.RecalcElementData();
    elem.YPrimInvalid := true;
    // end;
end;

function WindGens_Get_Bus1(): PAnsiChar; CDECL; // API Extension
var
    elem: TObj;
begin
    Result := NIL;
    if not _activeObj(DSSPrime, elem) then
        Exit;
    Result := DSS_GetAsPAnsiChar(DSSPrime, elem.GetBus(1));
end;
//------------------------------------------------------------------------------
function WindGens_Get_daily(): PAnsiChar; CDECL; // API Extension
var
    elem: TObj;
begin
    Result := NIL;
    if not _activeObj(DSSPrime, elem) then
        Exit;

    if elem.DailyDispShapeObj <> NIL then
        Result := DSS_GetAsPAnsiChar(DSSPrime, elem.DailyDispShapeObj.Name);
end;
//------------------------------------------------------------------------------
function WindGens_Get_Class_(): Integer; CDECL; // API Extension
var
    elem: TObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;

    Result := elem.GenClass;
end;
//------------------------------------------------------------------------------
function WindGens_Get_duty(): PAnsiChar; CDECL; // API Extension
var
    elem: TObj;
begin
    Result := NIL;
    if not _activeObj(DSSPrime, elem) then
        Exit;

    if elem.DutyShapeObj <> NIL then
        Result := DSS_GetAsPAnsiChar(DSSPrime, elem.DutyShapeObj.Name);
end;
//------------------------------------------------------------------------------
function WindGens_Get_IsDelta(): TAPIBoolean; CDECL; // API Extension
var
    elem: TObj;
begin
    Result := FALSE;
    if not _activeObj(DSSPrime, elem) then
        Exit;
    Result := (elem.Connection = TGeneralConnection.Delta);
end;
//------------------------------------------------------------------------------
function WindGens_Get_Yearly(): PAnsiChar; CDECL; // API Extension
var
    elem: TObj;
begin
    Result := NIL;
    if not _activeObj(DSSPrime, elem) then
        Exit;

    if elem.YearlyShapeObj <> NIL then
        Result := DSS_GetAsPAnsiChar(DSSPrime, elem.YearlyShapeObj.Name);
end;
//------------------------------------------------------------------------------
procedure WindGens_Set_Bus1(const Value: PAnsiChar); CDECL; // API Extension
var
    elem: TObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    elem.SetBus(1, Value);
    elem.PropertySideEffects(ord(TWindGenProp.bus1), 0, []);
end;
//------------------------------------------------------------------------------
procedure WindGens_Set_Class_(Value: Integer); CDECL; // API Extension
var
    elem: TObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    elem.SetInteger(ord(TWindGenProp.cls), Value, []);
end;
//------------------------------------------------------------------------------
procedure WindGens_Set_daily(const Value: PAnsiChar); CDECL; // API Extension
var
    elem: TObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;

    elem.DailyDispShapeObj := DSSPrime.LoadShapeClass.Find(Value);
    elem.PropertySideEffects(ord(TWindGenProp.daily), 0, []);
end;
//------------------------------------------------------------------------------
procedure WindGens_Set_duty(const Value: PAnsiChar); CDECL; // API Extension
var
    elem: TObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;

    elem.DutyShapeObj := DSSPrime.LoadShapeClass.Find(Value);
    elem.PropertySideEffects(ord(TWindGenProp.duty), 0, []);
end;
//------------------------------------------------------------------------------
procedure WindGens_Set_IsDelta(Value: TAPIBoolean); CDECL; // API Extension
var
    elem: TObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    if Value then
        elem.Connection := TGeneralConnection.Delta
    else
        elem.Connection := TGeneralConnection.Wye;

    elem.PropertySideEffects(ord(TWindGenProp.conn), 0, []);
    elem.RecalcElementData();
end;
//------------------------------------------------------------------------------
procedure WindGens_Set_Yearly(const Value: PAnsiChar); CDECL; // API Extension
var
    elem: TObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    elem.YearlyShapeObj := DSSPrime.LoadShapeClass.Find(Value);
    elem.PropertySideEffects(ord(TWindGenProp.yearly), 0, []);
end;
//------------------------------------------------------------------------------
function WindGens_Get_Ag(): Double; CDECL;
var
    elem: TObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;

    Result := elem.GenVars.Ag;
end;
//------------------------------------------------------------------------------
function WindGens_Get_Cp(): Double; CDECL;
var
    elem: TObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;

    Result := elem.GenVars.Cp;
end;
//------------------------------------------------------------------------------
function WindGens_Get_Lamda(): Double; CDECL;
var
    elem: TObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;

    Result := elem.GenVars.Lamda;
end;
//------------------------------------------------------------------------------
function WindGens_Get_N_WTG(): Integer; CDECL;
var
    elem: TObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;

    Result := elem.WindModelDyn.N_WTG;
end;
//------------------------------------------------------------------------------
function WindGens_Get_NPoles(): Integer; CDECL;
var
    elem: TObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;

    Result := Trunc(elem.GenVars.Poles);
end;
//------------------------------------------------------------------------------
function WindGens_Get_pd(): Double; CDECL;
var
    elem: TObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;

    Result := elem.GenVars.pd;
end;
//------------------------------------------------------------------------------
function WindGens_Get_PSS(): Double; CDECL;
var
    elem: TObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;

    Result := elem.WindModelDyn.PSS;
end;
//------------------------------------------------------------------------------
function WindGens_Get_QFlag(): Integer; CDECL;
var
    elem: TObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;

    Result := elem.WindModelDyn.QFlg;
end;
//------------------------------------------------------------------------------
function WindGens_Get_QMode(): Integer; CDECL;
var
    elem: TObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;

    Result := elem.WindModelDyn.QMode;
end;
//------------------------------------------------------------------------------
function WindGens_Get_QSS(): Double; CDECL;
var
    elem: TObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;

    Result := elem.WindModelDyn.QSS;
end;
//------------------------------------------------------------------------------
function WindGens_Get_Rad(): Double; CDECL;
var
    elem: TObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;

    Result := elem.GenVars.Rad;
end;
//------------------------------------------------------------------------------
function WindGens_Get_RThev(): Double; CDECL;
var
    elem: TObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;

    Result := elem.WindModelDyn.Zthev.re;
end;
//------------------------------------------------------------------------------
function WindGens_Get_VCutIn(): Double; CDECL;
var
    elem: TObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;

    Result := elem.GenVars.VCutIn;
end;
//------------------------------------------------------------------------------
function WindGens_Get_VCutOut(): Double; CDECL;
var
    elem: TObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;

    Result := elem.GenVars.VCutOut;
end;
//------------------------------------------------------------------------------
function WindGens_Get_Vss(): Double; CDECL;
var
    elem: TObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;

    Result := elem.WindModelDyn.Vss;
end;
//------------------------------------------------------------------------------
function WindGens_Get_WindSpeed(): Double; CDECL;
var
    elem: TObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;

    Result := elem.WindModelDyn.VWind;
end;
//------------------------------------------------------------------------------
function WindGens_Get_XThev(): Double; CDECL;
var
    elem: TObj;
begin
    Result := 0;
    if not _activeObj(DSSPrime, elem) then
        Exit;

    Result := elem.WindModelDyn.Zthev.im;
    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        elem.ReCalcElementData();
        elem.YPrimInvalid := True;
    end;
end;
//------------------------------------------------------------------------------
procedure WindGens_Set_Ag(Value: Double); CDECL;
var
    elem: TObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;

    elem.GenVars.Ag := Value;
    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        elem.RecalcElementData();
        // doesn't affect Yprim
    end;
end;
//------------------------------------------------------------------------------
procedure WindGens_Set_Cp(Value: Double); CDECL;
var
    elem: TObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    
    elem.GenVars.Cp := Value;
    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        elem.RecalcElementData();
        elem.YPrimInvalid := true;
    end;
end;
//------------------------------------------------------------------------------
procedure WindGens_Set_Lamda(Value: Double); CDECL;
var
    elem: TObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;

    elem.GenVars.Lamda := Value;
    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        elem.RecalcElementData();
        elem.YPrimInvalid := true;
    end;
end;
//------------------------------------------------------------------------------
procedure WindGens_Set_N_WTG(Value: Integer); CDECL;
var
    elem: TObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
